--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - openjpeg=2.3.0
   - openpyxl=3.1.5
   - pandas=2.2.1
+  -imageio=2.37.0
   - pip:
       - charset-normalizer==3.4.2
       - click==8.2.1
